keep trying to fix spacing.

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,5 +46,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .response label {
-    margin-right: 10px;
+    margin-right: 15px;
 }
